testsuite/tests/properties/invalid_enum_dflt_val/kwargs.lkt
import common

@with_default(value=a) enum MyEnum {
    case a, b, c
}
